increased spacing to avoid overlapping with the footer text

--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -193,8 +193,8 @@ footer {
 
 #dropuphelp { 
   position: fixed; 
-  bottom: 30px; 
-  right: 30px; 
+  bottom: 40px; 
+  right: 40px; 
   z-index: 1010;
 }
 
